# video-agent-android

./: .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  CMakeLists.txt  CUSTOMER_ONBOARDING.md  DATAMODEL.md  README.md  RELEASE.md  advanced.md  build.gradle  gradle.properties  local.properties  settings.gradle  tutorial.md
.claude/: settings.local.json
.dev/: MEDIATAILOR_IMPLEMENTATION_COMPLETE.md  MEDIATAILOR_QUICK_START.md  MEDIATAILOR_SPEC.md  MEDIATAILOR_STEP2_STEP3_TEST.md  MEDIATAILOR_TASKS.md  MEDIATAILOR_TEST_EXAMPLE.md  learning-doc.md  main_thread_research.md
.github/workflows/: beta-publish.yml  beta-release.yml  lint_pr.yml  publish.yml  release-notes-docs-pr.yml  release.yml
NRExoPlayerTracker/: build.gradle
NRExoPlayerTracker/src/main/: AndroidManifest.xml
NRIMATracker/: build.gradle
NRIMATracker/src/main/: AndroidManifest.xml
NRMediaTailorTracker/: build.gradle  consumer-rules.pro
NewRelicVideo/: build.gradle
NewRelicVideo/src/main/: AndroidManifest.xml
NewRelicVideoCore/: build.gradle
NewRelicVideoCore/src/main/: AndroidManifest.xml
Test/: settings.gradle
Test/app/: build.gradle
Test/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle  newrelic.properties  proguard-rules.pro
app/src/main/: AndroidManifest.xml
exo1tracker/: build.gradle
exo2tracker/: build.gradle
exo2tracker/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
scripts/: bump_version.sh  check_beta_version.sh  commit-msg
src/main/cpp/: CAL.cpp  Core_Wrapper.cxx  Core_Wrapper.i  StupidTest.cpp  StupidTest.hpp  (+4 more)
(+357 files in other folders)
